Relocated config information

--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,8 @@
     <!-- Load compiled Earth Engine JavaScript client library. -->
     <script src="/ee.js"></script>
 
+    <!-- Load our config. -->
+    <script src="config.js"></script>
     <!-- Load our script. -->
     <script src="app.js"></script>
 
