CHanged probability label

--- a/www/index.html
+++ b/www/index.html
@@ -43,7 +43,7 @@
     <button id="calc_button">Calculate Probability</button>
     <br /><br />
     <div>
-    <b>Probability: </b> <span id="probability"></span>
+    <b>Rock Avalanche Probability: </b> <span id="probability"></span>
     </div>
     <br /><Br />
     <div class="g-sign-in hidden">
