Changed title; changed decimal to percentage

--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>EE Demo: ee.MapLayerOverlay</title>
+    <title>Open-Source Rock Avalanche Modelling Software</title>
     <!-- Load the Roboto font. -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
 
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>EE Demo: ee.MapLayerOverlay</h1>
+    <h1>Open-Source Rock Avalanche Modelling Software</h1>
 
     <div class="map"></div>
     <input type='text' placeholder="Elevation of Point 1" id="elevation1" disabled="true" />
