Changed one label

--- a/www/index.html
+++ b/www/index.html
@@ -63,7 +63,7 @@
 
           <button id="calc_button">Calculate Probability</button>
           <br />
-          <b>Rock Avalanche Probability: </b> <span id="probability"></span>
+          <b>Rock Avalanche Runout Exceedance Probability: </b> <span id="probability"></span>
         </td>
       </tr>
     </table>
