multi request instead of a single multipoint request. the bottleneck seems to be executing R; which means we can still possibly first receive all the elevation data and then process all of them (or at least in batches) by supplying an array to the R script instead of processing one by one

--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
     <!-- Load compiled Earth Engine JavaScript client library. -->
-    <script src="/ee.js"></script>
+    <script src="ee.js"></script>
 
     <!-- Load our config. -->
     <script src="config.js"></script>
@@ -31,6 +31,7 @@
     <input type='text' placeholder="Elevation Difference" id="elevationDiff" disabled="true" />
     <input type='text' placeholder="Distance Between Points" id="distance" disabled="true" />
     <input type='text' placeholder="Volume" id="volume" />
+    <input type='text' placeholder="debuginfo" id="debuginfo" />
     <br />
     <select id="data">
       <option value="all" selected>All</option>
