local cache of gsheet used. we need to add a button to enable "recaching" of the data should the data changes in the future. maybe we can speed up further if we cache some of the R calculations as well like the line fitting

--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@
     <input type='text' placeholder="Elevation of Point 2" id="elevation2" disabled="true" />
     <input type='text' placeholder="Elevation Difference" id="elevationDiff" disabled="true" />
     <input type='text' placeholder="Distance Between Points" id="distance" disabled="true" />
-    <input type='text' placeholder="Volume" id="volume" />
+    <input type='text' placeholder="Volume" id="volume" value="100" />
     <input type='text' placeholder="debuginfo" id="debuginfo" />
     <br />
     <select id="data">
