--- a/www/index_old.html
+++ b/www/index_old.html
@@ -25,35 +25,12 @@
   <body>
     <h1>Open-Source Rock Avalanche Modelling Software</h1>
 
-    <table>
-      <tr>
-        <td width="80%">
-          <div class="map"></div>
-        </td>
-        <td class="label-inputs" width="20%">
-          <b>Elevation 1</b>
-          <input type='text' placeholder="Elevation of Point 1" id="elevation1"
-		 disabled="true"  size =10 />
-          <br />
-
-          <b>Elevation 2</b>
-          <input type='text' placeholder="Elevation of Point 2" id="elevation2"
-		 disabled="true"  size =10 />
-          <br />
-
-          <b>Elevation Difference</b>
-          <input type='text' placeholder="Elevation Difference"
-		 id="elevationDiff" disabled="true"  size =10 />
-          <br />
-
-          <b>Distance</b>
-          <input type='text' placeholder="Distance Between Points"
-		 id="distance" disabled="true"  size =10 />
-          <br />
-
-          <b>Volume</b>
-          <input type='text' placeholder="Volume" id="volume" value="100" />
-          <br />
+    <div class="map"></div>
+    <input type='text' placeholder="Elevation of Point 1" id="elevation1" disabled="true" />
+    <input type='text' placeholder="Elevation of Point 2" id="elevation2" disabled="true" />
+    <input type='text' placeholder="Elevation Difference" id="elevationDiff" disabled="true" />
+    <input type='text' placeholder="Distance Between Points" id="distance" disabled="true" />
+    <input type='text' placeholder="Volume" id="volume" value="100" />
     <input type='text' placeholder="debuginfo" id="debuginfo" />
     <br />
     <select id="data">
@@ -64,16 +41,12 @@
       <option value="Li">Li</option>
     </select>
     <br /><br />
-    <button id="calc_button">Calculate Probability (deprecated)</button>
+    <button id="calc_button">Calculate Probability</button>
     <br /><br />
     <div>
     <b>Rock Avalanche Probability: </b> <span id="probability"></span>
     </div>
-        </td>
-      </tr>
-    </table>
-    <br />
-    <br /><br />
+    <br /><Br />
     <div class="g-sign-in hidden">
       <span class="label">Sign in with:</span>
       <div class="button">
